@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
-		<TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net7.0;netstandard2.0</TargetFrameworks>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-		<TargetFrameworks>net462;net6.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net462;net6.0;net7.0;netstandard2.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -27,8 +27,7 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 		<NoWarn>1591</NoWarn>
 
-		<!-- Preview in 6.0 for struct initialization, can switch to latest with 7.0 SDK. -->
-		<LangVersion>preview</LangVersion>
+		<LangVersion>latest</LangVersion>
 		<WarningLevel>9999</WarningLevel>
 
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
