@@ -24,6 +24,10 @@
 				<dependency id="Microsoft.Extensions.Http" version="3.1.0" />
 			</group>
 
+			<group targetFramework="net7.0">
+				<dependency id="Microsoft.Extensions.Http" version="3.1.0" />
+			</group>
+
 			<group targetFramework="netstandard2.0">
 				<dependency id="Microsoft.Extensions.Http" version="3.1.0" />
 			</group>
@@ -33,6 +37,7 @@
 		<!-- The input directory structure is as it exists on the release agent, not as in the solution. -->
 		<file src="..\Prometheus.NetStandard20\**" target="lib\netstandard2.0" />
 		<file src="..\Prometheus.NetCore60\**" target="lib\net6.0" />
+		<file src="..\Prometheus.NetCore70\**" target="lib\net7.0" />
 		<file src="..\Prometheus.Net462\**" target="lib\net462" />
 
 		<file src="prometheus-net-logo.png" target="images\" />
